<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:id="@+id/header_line"
        android:background="#f5f5f5"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25px"
        android:gravity="center"
        android:background="#FFF"
        android:id="@+id/parent1"
        android:paddingBottom="25px">

        <View
            android:layout_width="10px"
            android:layout_height="38px"
            android:layout_gravity="center_vertical"
            android:background="#00b660"
            android:layout_marginLeft="30px"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22px"
            android:text="@string/zdyd_tv1"
            android:textColor="#000"
            android:textSize="32px"
            android:id="@+id/title_tv2"
            android:layout_gravity="center_vertical" />

        <com.suke.widget.SwitchButton
            android:id="@+id/switch_button"
            android:layout_width="89px"
            android:layout_height="53px"
            app:sb_background="#d2d2d2"
            app:sb_checked_color="#00b660"
            app:sb_button_color="#FFFFFF"
            app:sb_checkline_color="#ffffff"
            app:sb_uncheckcircle_color="#d2d2d2"
            android:layout_marginRight="30px"
            app:sb_uncheck_color="#d2d2d2"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f5f5f5"/>
    <RelativeLayout
        android:background="#FFF"
        android:id="@+id/parent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:text="@string/zdyd_tv4"
            android:textColor="#3c3c3c"
            android:layout_gravity="center_vertical"
            android:textSize="30px"
            android:paddingTop="36px"
            android:paddingBottom="36px"
            />
        <CheckedTextView
            android:layout_width="40px"
            android:layout_height="40px"
            android:id="@+id/xj_img"
            android:background="@drawable/check_selector"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:text="@string/zdyd_tv5"
            android:layout_toRightOf="@id/xj_img"
            android:textColor="#3c3c3c"
            android:singleLine="true"
            android:layout_gravity="center_vertical"
            android:textSize="30px"
            android:paddingTop="36px"
            android:paddingBottom="36px"
            />

        <RelativeLayout
            android:layout_width="375px"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content">
            <CheckedTextView
                android:layout_width="40px"
                android:layout_height="40px"
                android:id="@+id/dk_img"
                android:background="@drawable/check_selector"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:text="@string/zdyd_tv6"
                android:layout_toRightOf="@id/dk_img"
                android:textColor="#3c3c3c"
                android:layout_gravity="center_vertical"
                android:textSize="30px"
                android:singleLine="true"
                android:paddingTop="36px"
                android:paddingBottom="36px"
                />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:background="#f5f5f5"
        android:id="@+id/parent3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:text="@string/zdyd_tv7"
            android:textColor="#3c3c3c"
            android:layout_gravity="center_vertical"
            android:textSize="30px"
            android:paddingTop="36px"
            android:paddingBottom="36px"
            />
        <CheckedTextView
            android:layout_width="40px"
            android:layout_height="40px"
            android:id="@+id/yes_img"
            android:background="@drawable/check_selector"
            android:layout_centerVertical="true"

            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:text="@string/shi"
            android:layout_toRightOf="@id/yes_img"
            android:textColor="#3c3c3c"
            android:layout_gravity="center_vertical"
            android:textSize="30px"
            android:paddingTop="36px"
            android:paddingBottom="36px"
            />

        <RelativeLayout
            android:layout_width="375px"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content">
            <CheckedTextView
                android:layout_width="40px"
                android:layout_height="40px"
                android:id="@+id/no_img"
                android:background="@drawable/check_selector"
                android:layout_centerInParent="true"/>

            <TextView android:singleLine="true" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:text="@string/fou"
                android:layout_toRightOf="@id/no_img"
                android:textColor="#3c3c3c"
                android:layout_gravity="center_vertical"
                android:textSize="30px"
                android:paddingTop="36px"
                android:paddingBottom="36px"
                />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:background="#FFF"
        android:id="@+id/parent4"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f5f5f5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:text="@string/houses_tv43"
                android:textColor="#3c3c3c"
                android:layout_gravity="center_vertical"
                android:textSize="30px"
                android:paddingTop="36px"
                android:paddingBottom="36px"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/qsr"
                android:id="@+id/price"
                android:gravity="center_vertical|right"
                android:textColor="#6e6e6e"
                android:textSize="28px"
                android:textColorHint="#9b9b9b"
                android:paddingLeft="30px"
                android:paddingRight="0px"
                android:inputType="number"
                android:textCursorDrawable="@drawable/edit_cursor"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3px"
                android:text="AED"
                android:textColor="#3c3c3c"
                android:layout_marginRight="30px"
                android:layout_gravity="center_vertical"
                android:textSize="30px"
                android:paddingTop="36px"
                android:paddingBottom="36px"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>