<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:background="#f5f5f5"
        android:id="@+id/header1_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25px"
        android:gravity="center"
        android:background="#FFF"
        android:id="@+id/parent1"
        android:paddingBottom="25px">

        <View
            android:layout_width="10px"
            android:layout_height="38px"
            android:layout_gravity="center_vertical"
            android:background="#00b660"
            android:layout_marginLeft="30px"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22px"
            android:text="@string/zdyd_tv1"
            android:textColor="#000"
            android:layout_marginRight="30px"
            android:textSize="32px"
            android:id="@+id/title_tv"
            android:layout_gravity="center_vertical" />

        <com.suke.widget.SwitchButton
            android:id="@+id/switch_button1"
            android:layout_width="89px"
            android:layout_height="53px"
            app:sb_background="#d2d2d2"
            app:sb_checked_color="#00b660"
            app:sb_button_color="#FFFFFF"
            app:sb_checkline_color="#ffffff"
            app:sb_uncheckcircle_color="#d2d2d2"
            android:layout_marginRight="30px"
            app:sb_uncheck_color="#d2d2d2"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f5f5f5"/>

    <LinearLayout
        android:id="@+id/parent5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#FFF"
            android:paddingLeft="30px"
            android:paddingRight="30px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="34px"
                android:paddingBottom="34px"
                android:text="@string/houses_tv46"
                android:textColor="#333333"
                android:textSize="30px" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="4px"
                android:layout_marginRight="28px"
                android:gravity="center"
                android:text="*"
                android:textColor="#ff3366"
                android:textSize="30px" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15px"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:text="@string/qxz"
                android:id="@+id/qzrq1"
                android:textColor="#6e6e6e"
                android:textSize="28px" />

            <ImageView
                android:layout_width="18px"
                android:layout_height="12px"
                android:background="@mipmap/sq1"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f5f5f5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#FFF"
            android:paddingLeft="30px"
            android:paddingRight="30px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="34px"
                android:paddingBottom="34px"
                android:text="@string/houses_tv47"
                android:textColor="#333333"
                android:textSize="30px" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="4px"
                android:layout_marginRight="28px"
                android:gravity="center"
                android:text="*"
                android:textColor="#ff3366"
                android:textSize="30px" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15px"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:text="@string/qxz"
                android:id="@+id/sc1"
                android:textColor="#6e6e6e"
                android:textSize="28px" />

            <ImageView
                android:layout_width="18px"
                android:layout_height="12px"
                android:background="@mipmap/sq1"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f5f5f5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#FFF"
            android:paddingLeft="30px"
            android:paddingRight="30px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="34px"
                android:paddingBottom="34px"
                android:text="@string/houses_tv48"
                android:textColor="#333333"
                android:textSize="30px" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="4px"
                android:layout_marginRight="28px"
                android:gravity="center"
                android:text="*"
                android:textColor="#ff3366"
                android:textSize="30px" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15px"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:text="@string/qxz"
                android:id="@+id/zfjd1"
                android:textColor="#6e6e6e"
                android:textSize="28px" />

            <ImageView
                android:layout_width="18px"
                android:layout_height="12px"
                android:background="@mipmap/sq1"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f5f5f5"/>
        <LinearLayout
            android:background="#FFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:text="@string/houses_tv49"
                android:textColor="#3c3c3c"
                android:layout_gravity="center_vertical"
                android:textSize="30px"
                android:paddingTop="36px"
                android:paddingBottom="36px"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/qsr"
                android:gravity="center_vertical|right"
                android:textColor="#6e6e6e"
                android:id="@+id/zdsj1"
                android:maxLength="30"
                android:inputType="number"
                android:textSize="28px"
                android:textColorHint="#9b9b9b"
                android:paddingLeft="30px"
                android:paddingRight="0px"
                android:textCursorDrawable="@drawable/edit_cursor"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3px"
                android:text="AED/year"
                android:textColor="#3c3c3c"
                android:layout_marginRight="30px"
                android:layout_gravity="center_vertical"
                android:textSize="30px"
                android:paddingTop="36px"
                android:paddingBottom="36px"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>